<resources>
    <string name="app_name">Kurb Placer Admin</string>
    <string name="log_in">Log in</string>
    <string name="log_in_under_line"><u>Log in</u></string>
    <string name="email_hint">Email/user name</string>
    <string name="password">Password</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_up_with_out_under_line">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="forgot_your_password"><u>Forgot Your Password?</u></string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="employee_details">Employee Details</string>
    <string name="personal_information">Personal Information</string>
    <string name="_1_3">1/3</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle name</string>
    <string name="first_name">First name</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="state">State</string>
    <string name="post_code">Post code</string>
    <string name="postal_address_if_different">Postal Address (if Different)</string>
    <string name="home_phone">Home Phone</string>
    <string name="home">Home</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="date_commenced">Date commenced</string>
    <string name="employee_type">Employee Type</string>
    <string name="driver_license_number">Driver License number</string>
    <string name="white_card_number">White Card Number</string>
    <string name="uniform_shirt_size">Uniform Shirt Size</string>
    <string name="next">Next</string>
    <string name="taxation_amp_banking_details"><![CDATA[Taxation & Banking Details]]></string>
    <string name="_2_3">2/3</string>
    <string name="tax_file_number">Tax File Number</string>
    <string name="preferred_super_fund">Preferred super fund</string>
    <string name="super_member_number">Super Member Number</string>
    <string name="bank_bsb">Bank BSB</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch">Branch</string>
    <string name="bank_account_number">Bank account number</string>
    <string name="bank_account_name">Bank account name</string>
    <string name="_3_3">3/3</string>
    <string name="emergency_contact_details">Emergency Contact Details</string>
    <string name="name">Name</string>
    <string name="work_phone">Work Phone</string>
    <string name="relation">Relationship</string>
    <string name="profile">Profile</string>
    <string name="amp">\u0040</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="weekly_timesheet">Weekly timesheet</string>
    <string name="thursday_11_jan_2024">Thursday, 11 Jan, 2024</string>
    <string name="new_york">New York</string>
    <string name="check_in">Check-in</string>
    <string name="break_tv">Break</string>
    <string name="check_out">Check-Out</string>
    <string name="add_weekly_timesheet">Add Weekly Timesheet</string>
    <string name="view_all">View All</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="end_time">Finish Time</string>
    <string name="start_time">Start Time</string>
    <string name="save_timesheet">Save timesheet</string>
    <string name="notification">Notifications</string>
    <string name="new_message">New</string>
    <string name="full_name">Full name</string>
</resources>