<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signIn.SignInFragment">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/bottom_round_corner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/email_il"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_il"
        style="@style/TextInputLayout.White.Primary"
        android:layout_width="match_parent"
        android:layout_height= "@dimen/_40sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/input_bg"
        android:layout_marginBottom="@dimen/_15sdp"
        android:padding="@dimen/_1sdp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/password_il"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            style="@style/TextInputLayout.EditText.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:text=""
            app:hintTextColor="@color/hint_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_il"
        style="@style/TextInputLayout.White.Primary"
        android:layout_width="match_parent"
        android:layout_height= "@dimen/_40sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/input_bg"
        android:layout_marginBottom="@dimen/_17sdp"
        android:padding="@dimen/_1sdp"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/forgot_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            style="@style/TextInputLayout.EditText.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text=""
            app:hintTextColor="@color/hint_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/_11ssp"
        android:layout_marginBottom="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        style="@style/Button.14sp.Primary_Login_Button"
        android:text="@string/login"
        android:layout_marginStart="@dimen/_54sdp"
        android:layout_marginEnd="@dimen/_54sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_17sdp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/dim_black"
        android:fontFamily="@font/poppins_medium_italic"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2ssp"
        android:fontFamily="@font/montserrat_medium_italic"
        android:text="@string/sign_up"
        android:textColor="@color/red"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>