<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signup.SignUpFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/bottom_round_corner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/employee_details"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emergency_contact_details_il"
                style="@style/TextInputLayout.White.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:background="@drawable/input_bg"
                android:padding="@dimen/_1sdp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emergency_contact_details_et"
                    style="@style/TextInputLayout.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text=""
                    app:hintTextColor="@color/hint_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_il"
                style="@style/TextInputLayout.White.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:background="@drawable/input_bg"
                android:padding="@dimen/_1sdp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emergency_contact_details_il">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    style="@style/TextInputLayout.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/surname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text=""
                    app:hintTextColor="@color/hint_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_il"
                style="@style/TextInputLayout.White.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:background="@drawable/input_bg"
                android:padding="@dimen/_1sdp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_il">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_et"
                    style="@style/TextInputLayout.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text=""
                    app:hintTextColor="@color/hint_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/home_phone_il"
                style="@style/TextInputLayout.White.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:background="@drawable/input_bg"
                android:padding="@dimen/_1sdp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_il">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/home_phone_et"
                    style="@style/TextInputLayout.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/home_phone"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:text=""
                    app:hintTextColor="@color/hint_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/work_phone_il"
                style="@style/TextInputLayout.White.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:background="@drawable/input_bg"
                android:padding="@dimen/_1sdp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_phone_il">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/work_phone_et"
                    style="@style/TextInputLayout.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/dob"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:text=""
                    app:hintTextColor="@color/hint_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_il"
                style="@style/TextInputLayout.White.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/input_bg"
                android:padding="@dimen/_1sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/work_phone_il"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    style="@style/TextInputLayout.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text=""
                    app:hintTextColor="@color/hint_grey" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_btn"
                style="@style/Button.14sp.Primary_Login_Button"
                android:layout_marginStart="@dimen/_54sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_54sdp"
                android:text="@string/sign_up_with_out_under_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_il" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13ssp"
                android:layout_marginBottom="@dimen/_17sdp"
                android:fontFamily="@font/poppins_medium_italic"
                android:text="@string/already_have_an_account"
                android:textColor="@color/dim_black"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signup_btn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continue_btn" />

            <TextView
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2ssp"
                android:fontFamily="@font/montserrat_medium_italic"
                android:text="@string/log_in_under_line"
                android:textColor="@color/red"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>